--- a/web/coolui/templates/coolui/index.html
+++ b/web/coolui/templates/coolui/index.html
@@ -19,9 +19,11 @@
             </ul>
         </nav>
         <h1>Welcome!</h1>
+        <div class="mtop"></div>
         <div class="module">
             <h2>hosted with AWS using Django on apache.</h2>
         </div>
+        <div class="mbottom"></div>
         <p>
             You've reached my development website.<br>
             This page is currently under construction, please check back later!!!<br>
