added navi func

--- a/web/coolui/templates/coolui/project.html
+++ b/web/coolui/templates/coolui/project.html
@@ -12,21 +12,21 @@
     <div class="container">
         <nav>
             <ul class="show-desktop hide-mobile" id="nav">
-                    <li><a href="#">home</a></li>
+                    <li><a href="{% url 'index' %}">home</a></li>
                     <li><a href="{% url 'contact' %}">contact</a></li>
-                    <li><a href="{% url 'project' %}">projects</a></li>
+                    <li><a href="#">projects</a></li>
                 </li>
             </ul>
         </nav>
-        <h1>Welcome!</h1>
+        <h1>You've reached the projects page</h1>
         <div class="mtop"></div>
         <div class="module">
             <h2>on AWS Lightsail using Bitnami Django</h2>
         </div>
         <div class="mbottom"></div>
         <p>
-            You've reached my development website.<br>
-            This page is currently under construction. Please use the navigation above, or check back later!!!<br>
+            Currently under construction.<br>
+            Please use the navigation above, or check back later!!!<br>
         </p>
     </div>
 </body>
